--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,3 +1,4 @@
+# Здесь табуляция важна как кортошка в пюрешке
 name: flutter_project
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
@@ -30,6 +31,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  mobx: # Подключили зависимость (с версией mobx: ^version)
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -59,9 +61,10 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  # Сделаем директорию images с котиками
+  assets: # Эти три штуки раскомментировали
+    - assets/images/Котик_1.jpeg
+    - assets/images/steve_1.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
