--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,7 @@ dependencies:
   flutter:
     sdk: flutter
   mobx: # Подключили зависимость (с версией mobx: ^version)
-
-
+  easy_localization:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
@@ -62,10 +61,11 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   # Сделаем директорию images с котиками
-  assets: # Эти три штуки раскомментировали
+  assets:
     - assets/images/Котик_1.jpeg
     - assets/images/steve_1.jpeg
     - assets/barcode.jpeg
+    - assets/languages/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
